--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>รวมระบบของ ปวช.ศูนย์ส่งเสริมการเรียนรู้ระดับอำเภอเมืองนครราชสีมา</title>
+    <title>ระบบงานสารสนเทศ ปวช.ศูนย์ส่งเสริมการเรียนรู้ระดับอำเภอเมืองนครราชสีมา</title>
     
     <!-- Google Fonts: Sarabun for Thai text -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -130,6 +130,9 @@
                     <div class="flex-1">
                         <h3 class="font-bold text-xl">ระบบตรวจสอบตารางสอบปลายภาคเรียน</h3>
                         <p class="text-sm text-gray-500">Exam Schedule Checking</p>
+                        <p class="text-xs text-red-500 mt-1 font-medium">
+                            <i class="fas fa-info-circle mr-1"></i> รอติดตามวันประกาศวันสอบปลายภาคเรียนอีกครั้ง
+                        </p>
                     </div>
                     <i class="fas fa-chevron-right text-gray-300 group-hover:text-orange-500"></i>
                 </a>
