--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ระบบงานสารสนเทศ ปวช.ศูนย์ส่งเสริมการเรียนรู้ระดับอำเภอเมืองนครราชสีมา</title>
+    <title>ระบบงานสารสนเทศของ ปวช.ศูนย์ส่งเสริมการเรียนรู้ระดับอำเภอเมืองนครราชสีมา</title>
     
     <!-- Google Fonts: Sarabun for Thai text -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -120,6 +120,18 @@
                         <p class="text-sm text-gray-500">Student Attendance System</p>
                     </div>
                     <i class="fas fa-chevron-right text-gray-300 group-hover:text-blue-600"></i>
+                </a>
+
+                <!-- Button 1.5 (New) -->
+                <a href="https://phonwat1555.github.io/Student-System-Attendance-/" target="_blank" class="btn-hover group flex items-center p-4 bg-white border-l-4 border-purple-600 rounded-xl shadow-md hover:bg-purple-50 cursor-pointer no-underline text-gray-800">
+                    <div class="bg-purple-100 p-3 rounded-full mr-4 group-hover:bg-purple-600 transition-colors duration-300">
+                        <i class="fas fa-clipboard-list text-purple-600 text-xl group-hover:text-white transition-colors duration-300"></i>
+                    </div>
+                    <div class="flex-1">
+                        <h3 class="font-bold text-xl">ตรวจสอบข้อมูลการเข้าเรียน</h3>
+                        <p class="text-sm text-gray-500">Check Attendance Information</p>
+                    </div>
+                    <i class="fas fa-chevron-right text-gray-300 group-hover:text-purple-600"></i>
                 </a>
 
                 <!-- Button 2 -->
