--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <!-- Buttons Section -->
             <div class="space-y-4">
                 
-                <!-- Button 1 -->
+                <!-- Button 1: Attendance -->
                 <a href="https://phonwat1555.github.io/Student-Attendance-System/" target="_blank" class="btn-hover group flex items-center p-4 bg-white border-l-4 border-blue-600 rounded-xl shadow-md hover:bg-blue-50 cursor-pointer no-underline text-gray-800">
                     <div class="bg-blue-100 p-3 rounded-full mr-4 group-hover:bg-blue-600 transition-colors duration-300">
                         <i class="fas fa-user-check text-blue-600 text-xl group-hover:text-white transition-colors duration-300"></i>
@@ -122,7 +122,7 @@
                     <i class="fas fa-chevron-right text-gray-300 group-hover:text-blue-600"></i>
                 </a>
 
-                <!-- Button 1.5 (New) -->
+                <!-- Button 2: Check Attendance -->
                 <a href="https://phonwat1555.github.io/Student-System-Attendance-/" target="_blank" class="btn-hover group flex items-center p-4 bg-white border-l-4 border-purple-600 rounded-xl shadow-md hover:bg-purple-50 cursor-pointer no-underline text-gray-800">
                     <div class="bg-purple-100 p-3 rounded-full mr-4 group-hover:bg-purple-600 transition-colors duration-300">
                         <i class="fas fa-clipboard-list text-purple-600 text-xl group-hover:text-white transition-colors duration-300"></i>
@@ -134,7 +134,7 @@
                     <i class="fas fa-chevron-right text-gray-300 group-hover:text-purple-600"></i>
                 </a>
 
-                <!-- Button 2 -->
+                <!-- Button 3: Exam Schedule -->
                 <a href="https://phonwat1555.github.io/ESCS1/" target="_blank" class="btn-hover group flex items-center p-4 bg-white border-l-4 border-orange-500 rounded-xl shadow-md hover:bg-orange-50 cursor-pointer no-underline text-gray-800">
                     <div class="bg-orange-100 p-3 rounded-full mr-4 group-hover:bg-orange-500 transition-colors duration-300">
                         <i class="fas fa-calendar-days text-orange-600 text-xl group-hover:text-white transition-colors duration-300"></i>
@@ -149,7 +149,19 @@
                     <i class="fas fa-chevron-right text-gray-300 group-hover:text-orange-500"></i>
                 </a>
 
-                <!-- Button 3 (Modified to Open Login Modal) -->
+                <!-- Button 4 (NEW): NFE STD 2018 -->
+                <a href="https://nfestd2018.moe.go.th/web/Index.htm?mode=index" target="_blank" class="btn-hover group flex items-center p-4 bg-white border-l-4 border-emerald-600 rounded-xl shadow-md hover:bg-emerald-50 cursor-pointer no-underline text-gray-800">
+                    <div class="bg-emerald-100 p-3 rounded-full mr-4 group-hover:bg-emerald-600 transition-colors duration-300">
+                        <i class="fas fa-file-signature text-emerald-600 text-xl group-hover:text-white transition-colors duration-300"></i>
+                    </div>
+                    <div class="flex-1">
+                        <h3 class="font-bold text-xl">ระบบงานทะเบียนวัดผล ศธ.02 ออนไลน์</h3>
+                        <p class="text-sm text-gray-500">Registration & Measurement System</p>
+                    </div>
+                    <i class="fas fa-chevron-right text-gray-300 group-hover:text-emerald-600"></i>
+                </a>
+
+                <!-- Button 5: Admin Login (Modified to Open Login Modal) -->
                 <div onclick="openLoginModal()" class="btn-hover group flex items-center p-4 bg-white border-l-4 border-teal-600 rounded-xl shadow-md hover:bg-teal-50 cursor-pointer text-gray-800 relative">
                     <div class="bg-teal-100 p-3 rounded-full mr-4 group-hover:bg-teal-600 transition-colors duration-300">
                         <i class="fas fa-clock-rotate-left text-teal-700 text-xl group-hover:text-white transition-colors duration-300"></i>
