--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         <p class="text-xs text-gray-500 mt-0.5">Exam Schedule Checking</p>
                         <div class="inline-flex items-center mt-1.5 px-2 py-0.5 bg-orange-100 rounded-md border border-orange-200">
                             <i class="fas fa-info-circle text-[10px] text-orange-600 mr-1"></i>
-                            <span class="text-[10px] font-medium text-orange-700">รอประกาศวันสอบ</span>
+                            <span class="text-[10px] font-medium text-orange-700">รอประกาศวันสอบอีกครั้งจากทางศูนย์</span>
                         </div>
                     </div>
                     
@@ -393,3 +393,4 @@
 
 </body>
 </html>
+
