--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     </div>
 
                     <!-- Button 4: ระบบทะเบียนวัดผล ศธ.02 -->
-                    <div onclick="openSystem('https://nfestd2018.moe.go.th/web/Index.htm?mode=index', 'ระบบทะเบียนวัดผล ศธ.02')"
+                    <div onclick="openSystem('https://nfestd2018.moe.go.th/web/Login.htm?mode=indexStudent', 'ระบบทะเบียนวัดผล ศธ.02')"
                        class="animate-fade-in-up btn-shine group flex items-center p-4 bg-white hover:bg-emerald-50/50 rounded-2xl border-l-[6px] border-l-emerald-500 hover:border-l-emerald-600 shadow-md hover:shadow-xl hover:-translate-y-1 transition-all duration-300 relative cursor-pointer"
                        style="animation-delay: 0.6s;">
                         <div class="flex-shrink-0 w-12 h-12 flex items-center justify-center rounded-xl bg-gradient-to-br from-emerald-500 to-emerald-700 text-white shadow-lg group-hover:scale-110 transition-transform duration-300">
@@ -570,3 +570,4 @@
     </script>
 </body>
 </html>
+
