--- a/index.html
+++ b/index.html
@@ -270,12 +270,12 @@
         <div class="whitespace-nowrap animate-marquee flex items-center gap-8">
             <span class="inline-flex items-center gap-2"><i class="fas fa-bullhorn text-yellow-400"></i> ยินดีต้อนรับสู่ระบบสารสนเทศ ปวช. สกร.อำเภอเมืองนครราชสีมา</span>
             <span class="inline-flex items-center gap-2 text-blue-200">|</span>
-            <span class="inline-flex items-center gap-2">📢 แจ้งนักศึกษาตรวจสอบตารางสอบปลายภาคเรียนที่ 2/2567 ผ่านระบบได้แล้ววันนี้</span>
+            <span class="inline-flex items-center gap-2">📢 แจ้งนักศึกษาตรวจสอบตารางสอบปลายภาคเรียนที่ 2/2568 ผ่านระบบได้แล้ววันนี้</span>
             <span class="inline-flex items-center gap-2 text-blue-200">|</span>
             <span class="inline-flex items-center gap-2">💡 อย่าลืมเช็คชื่อเข้าเรียนทุกครั้งเพื่อสิทธิ์ในการสอบ</span>
             <!-- Duplicate for seamless loop effect (optional, or rely on css) -->
              <span class="inline-flex items-center gap-2 text-blue-200">|</span>
-             <span class="inline-flex items-center gap-2">📞 ติดต่อสอบถามงานทะเบียนได้ที่เบอร์ 044-xxx-xxx ในเวลาราชการ</span>
+             <span class="inline-flex items-center gap-2">📞 ติดต่อสอบถามงานทะเบียนได้ที่เบอร์ 044220454 ในเวลาราชการ</span>
         </div>
     </div>
 
@@ -435,7 +435,7 @@
     
     <!-- === FLOAT SOCIAL DOCK === -->
     <div class="social-dock animate-fade-in-up" style="animation-delay: 1s;">
-        <a href="https://www.facebook.com/" target="_blank" class="social-btn facebook" title="https://www.facebook.com/search/top?q=%E0%B8%9B%E0%B8%A7%E0%B8%8A.%20%E0%B8%81%E0%B8%A8%E0%B8%99.%E0%B8%AD%E0%B8%B3%E0%B9%80%E0%B8%A0%E0%B8%AD%E0%B9%80%E0%B8%A1%E0%B8%B7%E0%B8%AD%E0%B8%87%E0%B8%99%E0%B8%84%E0%B8%A3%E0%B8%A3%E0%B8%B2%E0%B8%8A%E0%B8%AA%E0%B8%B5%E0%B8%A1%E0%B8%B2">
+        <a href="https://www.facebook.com/" target="_blank" class="social-btn facebook" title="https://www.facebook.com/PVCHMeuangKorat">
             <i class="fab fa-facebook-f"></i>
         </a>
         <a href="#" class="social-btn line" title="Line OA">
@@ -739,3 +739,4 @@
     </script>
 </body>
 </html>
+
