--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     
                     <!-- Button 1: ระบบบันทึกการเข้าเรียน -->
                     <div onclick="openSystem('https://phonwat1555.github.io/Student-Attendance-System/', 'ระบบบันทึกการเข้าเรียน')"
-                       class="animate-fade-in-up btn-shine group flex items-center p-4 bg-white hover:bg-blue-50/80 rounded-2xl border-l-[6px] border-l-blue-500 hover:border-l-blue-600 shadow-sm hover:shadow-lg hover:-translate-y-1 transition-all duration-300 relative cursor-pointer border border-gray-50"
+                       class="animate-fade-in-up btn-shine group flex items-center p-4 bg-white hover:bg-blue-50/80 rounded-2xl border-l-[6px] border-l-blue-500 hover:border-l-blue-600 shadow-sm hover:shadow-lg hover:-translate-y-1 transition-all duration-300 relative cursor-pointer border-2 border-blue-100 hover:border-blue-300"
                        style="animation-delay: 0.3s;">
                         <div class="flex-shrink-0 w-12 h-12 flex items-center justify-center rounded-xl bg-gradient-to-br from-blue-500 to-blue-600 text-white shadow-md group-hover:scale-110 transition-transform duration-300">
                             <i class="fas fa-user-check text-lg"></i>
@@ -246,7 +246,7 @@
 
                     <!-- Button 2: ตรวจสอบข้อมูลการเข้าเรียน -->
                     <div onclick="openSystem('https://phonwat1555.github.io/Student-System-Attendance-/', 'ตรวจสอบข้อมูลการเข้าเรียน')"
-                       class="animate-fade-in-up btn-shine group flex items-center p-4 bg-white hover:bg-purple-50/80 rounded-2xl border-l-[6px] border-l-purple-500 hover:border-l-purple-600 shadow-sm hover:shadow-lg hover:-translate-y-1 transition-all duration-300 relative cursor-pointer border border-gray-50"
+                       class="animate-fade-in-up btn-shine group flex items-center p-4 bg-white hover:bg-purple-50/80 rounded-2xl border-l-[6px] border-l-purple-500 hover:border-l-purple-600 shadow-sm hover:shadow-lg hover:-translate-y-1 transition-all duration-300 relative cursor-pointer border-2 border-purple-100 hover:border-purple-300"
                        style="animation-delay: 0.4s;">
                         <div class="flex-shrink-0 w-12 h-12 flex items-center justify-center rounded-xl bg-gradient-to-br from-purple-500 to-purple-600 text-white shadow-md group-hover:scale-110 transition-transform duration-300">
                             <i class="fas fa-clipboard-list text-lg"></i>
@@ -260,7 +260,7 @@
 
                     <!-- Button 3: ระบบตรวจสอบตารางสอบ -->
                     <div onclick="openSystem('https://phonwat1555.github.io/ESCS1/', 'ระบบตรวจสอบตารางสอบ')"
-                       class="animate-fade-in-up btn-shine group flex items-center p-4 bg-white hover:bg-orange-50/80 rounded-2xl border-l-[6px] border-l-orange-500 hover:border-l-orange-600 shadow-sm hover:shadow-lg hover:-translate-y-1 transition-all duration-300 relative cursor-pointer border border-gray-50"
+                       class="animate-fade-in-up btn-shine group flex items-center p-4 bg-white hover:bg-orange-50/80 rounded-2xl border-l-[6px] border-l-orange-500 hover:border-l-orange-600 shadow-sm hover:shadow-lg hover:-translate-y-1 transition-all duration-300 relative cursor-pointer border-2 border-orange-100 hover:border-orange-300"
                        style="animation-delay: 0.5s;">
                         <div class="flex-shrink-0 w-12 h-12 flex items-center justify-center rounded-xl bg-gradient-to-br from-orange-500 to-orange-600 text-white shadow-md group-hover:scale-110 transition-transform duration-300">
                             <i class="fas fa-calendar-days text-lg"></i>
@@ -277,7 +277,7 @@
 
                     <!-- Button 4: ระบบทะเบียนวัดผล ศธ.02 -->
                     <div onclick="openSystem('https://nfestd2018.moe.go.th/web/Index.htm?mode=index', 'ระบบทะเบียนวัดผล ศธ.02')"
-                       class="animate-fade-in-up btn-shine group flex items-center p-4 bg-white hover:bg-emerald-50/80 rounded-2xl border-l-[6px] border-l-emerald-500 hover:border-l-emerald-600 shadow-sm hover:shadow-lg hover:-translate-y-1 transition-all duration-300 relative cursor-pointer border border-gray-50"
+                       class="animate-fade-in-up btn-shine group flex items-center p-4 bg-white hover:bg-emerald-50/80 rounded-2xl border-l-[6px] border-l-emerald-500 hover:border-l-emerald-600 shadow-sm hover:shadow-lg hover:-translate-y-1 transition-all duration-300 relative cursor-pointer border-2 border-emerald-100 hover:border-emerald-300"
                        style="animation-delay: 0.6s;">
                         <div class="flex-shrink-0 w-12 h-12 flex items-center justify-center rounded-xl bg-gradient-to-br from-emerald-500 to-emerald-600 text-white shadow-md group-hover:scale-110 transition-transform duration-300">
                             <i class="fas fa-file-signature text-lg"></i>
@@ -291,7 +291,7 @@
 
                     <!-- Admin Button (Now Public) -->
                     <div onclick="openSystem('https://phonwat1555.github.io/Attendance-History-Tracking-System/', 'ระบบตรวจสอบประวัติการเข้าเรียน')" 
-                         class="animate-fade-in-up btn-shine md:col-span-2 group flex items-center p-4 bg-white hover:bg-teal-50/80 rounded-2xl border-l-[6px] border-l-teal-500 hover:border-l-teal-600 shadow-sm hover:shadow-lg hover:-translate-y-1 transition-all duration-300 relative cursor-pointer border border-gray-50"
+                         class="animate-fade-in-up btn-shine md:col-span-2 group flex items-center p-4 bg-white hover:bg-teal-50/80 rounded-2xl border-l-[6px] border-l-teal-500 hover:border-l-teal-600 shadow-sm hover:shadow-lg hover:-translate-y-1 transition-all duration-300 relative cursor-pointer border-2 border-teal-100 hover:border-teal-300"
                          style="animation-delay: 0.7s;">
                         <div class="flex-shrink-0 w-12 h-12 flex items-center justify-center rounded-xl bg-gradient-to-br from-teal-500 to-teal-600 text-white shadow-md group-hover:scale-110 transition-transform duration-300">
                             <i class="fas fa-user-shield text-lg"></i>
@@ -309,7 +309,7 @@
                 <div class="mt-8 text-center animate-fade-in-up" style="animation-delay: 0.8s;">
                     <div class="inline-block px-4 py-1.5 bg-white/50 rounded-full border border-white/50 shadow-sm backdrop-blur-sm">
                         <p class="text-sm text-slate-500 font-semibold">
-                            © 2025 ศูนย์ส่งเสริมการเรียนรู้ระดับอำเภอเมืองนครราชสีมา
+                            Copyright 2025 © ศูนย์ส่งเสริมการเรียนรู้ระดับอำเภอเมืองนครราชสีมา
                         </p>
                     </div>
                 </div>
